# netconf-rust

./: Cargo.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
netconf-async/: Cargo.toml  README.md
netconf-async/src/: connection.rs  error.rs  framer.rs  lib.rs  message.rs  transport.rs
netconf-async/src/framer/: async_framer.rs
netconf-async/src/transport/: ssh.rs
netconf-cli/: Cargo.toml  README.md
netconf-cli/src/: cli.rs  commands.rs  config.rs  main.rs  ssh.rs
netconf-cli/src/commands/: builtin.rs  get.rs  get_config.rs  notification.rs
netconf-rust/: Cargo.toml
netconf-rust/src/: error.rs  lib.rs  message.rs
netconf-rust/src/framer/: mod.rs
netconf-rust/src/transport/: mod.rs  ssh.rs
