[package]
name = "netconf"
version = "0.1.0"
edition = "2021"
authors = ["Lauri Huotari <flatlate@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netconf-rust = { version = "0.1.0", path = "../netconf-rust" }
log = { version = "0.4.21", features = ["std"] }
env_logger = { version = "0.11.3" }
clap = { version = "4.5.4", features = ["derive", "env"] }
ssh2 = "0.9"
ssh2-config = "0.2"
dirs = "5.0"
futures = "0.3"
