[package]
name = "netconf-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
memmem = "0.1"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"
log = { version = "0.4.21", features = ["std"] }
ssh2 = { version = "0.9" }

[dev-dependencies]
pretty_assertions = "1.4"
